# OVS_lab1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: data_gen.py  sample.txt
data/fail_test/: fail1.txt  fail2.txt  fail3.txt  fail4.txt  fail5.txt
data/test/: circle_0.txt  circle_1.txt  circle_10.txt  circle_11.txt  circle_12.txt  circle_13.txt  circle_14.txt  circle_15.txt  circle_16.txt  circle_17.txt  circle_18.txt  circle_19.txt  circle_2.txt  circle_20.txt  circle_21.txt  circle_22.txt  circle_23.txt  circle_24.txt  circle_25.txt  circle_26.txt  circle_27.txt  circle_28.txt  circle_29.txt  circle_3.txt  circle_4.txt  circle_5.txt  circle_6.txt  circle_7.txt  circle_8.txt  circle_9.txt  rectangle_0.txt  rectangle_1.txt  rectangle_10.txt  rectangle_11.txt  rectangle_12.txt  rectangle_13.txt  rectangle_14.txt  rectangle_15.txt  rectangle_16.txt  rectangle_17.txt  (+46 more)
data/train/: circle_0.txt  circle_1.txt  circle_10.txt  circle_11.txt  circle_12.txt  circle_13.txt  circle_14.txt  circle_16.txt  circle_17.txt  circle_18.txt  circle_19.txt  circle_2.txt  circle_20.txt  circle_21.txt  circle_22.txt  circle_23.txt  circle_24.txt  circle_25.txt  circle_26.txt  circle_27.txt  circle_28.txt  circle_29.txt  circle_3.txt  circle_4.txt  circle_5.txt  circle_6.txt  circle_7.txt  circle_8.txt  circle_9.txt  rectangle_0.txt  rectangle_1.txt  rectangle_10.txt  rectangle_11.txt  rectangle_12.txt  rectangle_13.txt  rectangle_14.txt  rectangle_15.txt  (+47 more)
include/: NeuralLayer.h  NeuralNet.h  Neuron.h
src/: NeuralLayer.cpp  NeuralNet.cpp  Neuron.cpp
test/: shape1.txt
